# aus-house-select

./: .gitattributes  README.md  data_utils.py  package-lock.json  pyproject.toml
assets/: sa1_2021.geojson  school_catchments.geojson  schools_2019.geojson  statistical_area_level_1,_indexes,_seifa_2021_table_1.csv  transit_services.geojson
scripts/: build_arcgis_manifest.py  prep_geojson.py
src/: main.py
src/house_selector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/components/: ArcgisImageLayer.tsx
web/src/hooks/: useMapData.ts
web/src/utils/: geojson.ts  kmz.ts  loaders.ts  schools.ts
